--- a/Sunwise/View/Sunbathe/Sunbathe.storyboard
+++ b/Sunwise/View/Sunbathe/Sunbathe.storyboard
@@ -36,16 +36,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l2P-Pr-fgZ">
-                                <rect key="frame" x="0.0" y="0.0" width="413" height="852"/>
+                                <rect key="frame" x="0.0" y="103" width="600" height="749"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6KH-nm-OdM" userLabel="View Scroll">
-                                        <rect key="frame" x="0.0" y="0.0" width="413" height="955"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="955"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="DgM-7Y-7px" userLabel="Stack View Big">
-                                                <rect key="frame" x="10" y="0.0" width="393" height="955"/>
+                                                <rect key="frame" x="10" y="0.0" width="580" height="955"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Halaman Sunbathe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzw-gp-SfB">
-                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="580" height="50"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="f3F-Sz-p8S"/>
                                                         </constraints>
@@ -54,24 +54,24 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qe9-aK-cKE" customClass="UVCurrent" customModule="Sunwise" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="80" width="393" height="60"/>
+                                                        <rect key="frame" x="0.0" y="80" width="580" height="60"/>
                                                         <color key="backgroundColor" systemColor="systemMintColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="60" id="EzZ-tK-vse"/>
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="KWw-Vd-fAY">
-                                                        <rect key="frame" x="0.0" y="170" width="393" height="205"/>
+                                                        <rect key="frame" x="0.0" y="170" width="580" height="205"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qhh-dR-ibg" customClass="ProtectionSelected" customModule="Sunwise" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="0.0" width="393" height="170"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="580" height="170"/>
                                                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="170" id="hrf-vu-nIx"/>
                                                                 </constraints>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H0T-TQ-Zpo">
-                                                                <rect key="frame" x="0.0" y="170" width="393" height="35"/>
+                                                                <rect key="frame" x="0.0" y="170" width="580" height="35"/>
                                                                 <subviews>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YR1-y1-b69">
                                                                         <rect key="frame" x="9.9999999999999929" y="0.33333333333331439" width="121.33333333333331" height="34.333333333333336"/>
@@ -93,7 +93,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="vaL-7u-Lkv" userLabel="Stack View Start Sunbathe">
-                                                        <rect key="frame" x="0.0" y="405" width="393" height="220"/>
+                                                        <rect key="frame" x="0.0" y="405" width="580" height="220"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today's Goal:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="crU-Bc-mL2">
                                                                 <rect key="frame" x="0.0" y="0.0" width="102.66666666666667" height="25"/>
@@ -174,7 +174,7 @@
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     </stackView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pgw-Zp-8SI">
-                                                        <rect key="frame" x="0.0" y="655" width="393" height="300"/>
+                                                        <rect key="frame" x="0.0" y="655" width="580" height="300"/>
                                                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="300" id="gfN-kd-40X"/>
@@ -208,7 +208,7 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="l2P-Pr-fgZ" secondAttribute="trailing" id="eSR-jb-RbB"/>
                             <constraint firstAttribute="bottom" secondItem="l2P-Pr-fgZ" secondAttribute="bottom" id="hDQ-7d-vdU"/>
-                            <constraint firstItem="l2P-Pr-fgZ" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="rYD-Tx-fSp"/>
+                            <constraint firstItem="l2P-Pr-fgZ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="rYD-Tx-fSp"/>
                             <constraint firstItem="l2P-Pr-fgZ" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="ybS-ZY-aLv"/>
                         </constraints>
                     </view>
